fix letter-spacing

--- a/perfect_space/static/css/stylesheet.css
+++ b/perfect_space/static/css/stylesheet.css
@@ -56,6 +56,10 @@ a:hover {
 
 .pubtitle {
     font-size: 11pt;
+    letter-spacing: normal;
+}
+.pubtitle.pubupper {
+    letter-spacing: normal;
 }
 
 .pubtext {
